@@ -274,11 +274,21 @@ test_that("plot_poppr_msn will not take the quantiles for the legend (UX)", {
 
 test_that("plot_poppr_msn can plot without legends (UX)", {
   skip_on_cran()
-  x <- plot_poppr_msn(gend, pmsn_ties, pop.leg = FALSE, scale.leg = FALSE)
+  x <- plot_poppr_msn(gend, pmsn_ties, pop.leg = FALSE, size.leg = FALSE, scale.leg = FALSE)
   expect_identical(ucl(x), ucl(pmsn_ties))
-  x <- plot_poppr_msn(gend, pmsn_ties, pop.leg = TRUE, scale.leg = FALSE)
+  x <- plot_poppr_msn(gend, pmsn_ties, pop.leg = TRUE, size.leg = FALSE, scale.leg = FALSE)
   expect_identical(ucl(x), ucl(pmsn_ties))
-  x <- plot_poppr_msn(gend, pmsn_ties, pop.leg = FALSE, scale.leg = TRUE)
+  x <- plot_poppr_msn(gend, pmsn_ties, pop.leg = FALSE, size.leg = TRUE, scale.leg = FALSE)
+  expect_identical(ucl(x), ucl(pmsn_ties))
+  x <- plot_poppr_msn(gend, pmsn_ties, pop.leg = TRUE, size.leg = TRUE, scale.leg = FALSE)
+  expect_identical(ucl(x), ucl(pmsn_ties))
+  x <- plot_poppr_msn(gend, pmsn_ties, pop.leg = FALSE, size.leg = FALSE, scale.leg = TRUE)
+  expect_identical(ucl(x), ucl(pmsn_ties))
+  x <- plot_poppr_msn(gend, pmsn_ties, pop.leg = TRUE, size.leg = FALSE, scale.leg = TRUE)
+  expect_identical(ucl(x), ucl(pmsn_ties))
+  x <- plot_poppr_msn(gend, pmsn_ties, pop.leg = FALSE, size.leg = TRUE, scale.leg = TRUE)
+  expect_identical(ucl(x), ucl(pmsn_ties))
+  x <- plot_poppr_msn(gend, pmsn_ties, pop.leg = TRUE, size.leg = TRUE, scale.leg = TRUE)
   expect_identical(ucl(x), ucl(pmsn_ties))
 })
 
